Criação da request para adicionar um grupo de tarefas
