# src/modules/groups/group.model.js
@@ -1,0 +1,8 @@
+import mongoose from 'mongoose';
+
+const Group = mongoose.model('Group', {
+  name: String,
+  taskIdList: Array,
+});
+
+export default Group;
